# paradox_init

./: Cargo.toml  LICENSE  README.md
doc/examples/: cgroups.json  dbus.json  elogind.json  endscript.json  fsck.json  init.list  install.sh  io.json  machine-id.json  mount-rw.json  mounts.json  neofetch.json  rc-local.json  sulogin.json  udevd.json  utmp.json
src/: halt.rs  lib.rs  log.rs  poweroff.rs  reboot.rs
src/fifo/: mod.rs
src/init/: lib.rs  main.rs
src/init/lib/: halt.rs  log.rs
src/initctl/: lib.rs  main.rs
src/initctl/lib/: error.rs  init_communication.rs  log.rs
