[package]
name = "paradox_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "init"
path = "src/init/main.rs"

[[bin]]
name = "initctl"
path = "src/initctl/main.rs"

[[bin]]
name = "reboot"
path = "src/reboot.rs"

[[bin]]
name = "poweroff"
path = "src/poweroff.rs"

[[bin]]
name = "halt"
path = "src/halt.rs"